MAS Scheduler service